fix header z-index

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,7 +1,7 @@
 header {
     position: fixed;
     width: 100%;
-    z-index: 5;
+    z-index: 10;
   }
   
   /* .header .navbar {
@@ -128,7 +128,9 @@ header {
   }
   
   
-  
+  .dropdown-nav *{
+    z-index: 999;
+  }
   
   .dropdown-nav {
     display: flex;
@@ -143,11 +145,11 @@ header {
   }
   
   .dropdown-nav.open {
+    z-index: 9;
     opacity: 1;
     height: 100vh;
     transition: all 0.5s ease;
     width: 100%;
-    z-index: 1;
     position: fixed;
   }
   
